--- a/Hoya.html
+++ b/Hoya.html
@@ -13,6 +13,6 @@
     <a href="Haku.html"><li>Haku</li></a>
   </ol>
 <h2> Hoya </h2>
-<p>Hi, This is <strong>Me, Myself</strong></p>
+<p>Hi, This is <strong>Me, Myself.</strong><br>안녕하세요 저는 김호입니다.</p>
 <a href="https://www.facebook.com/tigerhoya" target="_blank" title="My facebook"><img SRC="Hoya.jpg" width="500"></a>
 </body>
