--- a/Mindy.html
+++ b/Mindy.html
@@ -15,7 +15,7 @@
 <h2> Mindy </h2>
 <p>This is my fur daughter<strong>Mindy</strong></p>
 <p>
-  <iframe width="1280" height="720" src="https://www.youtube.com/embed/-XbW8qco1AU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="1280" height="720" src="https://www.youtube.com/embed/-XbW8qco1AU" frameborder="0" allowfullscreen></iframe>
 </P>
 <a href="https://www.facebook.com/photo.php?fbid=1280357585331049&set=a.1280357518664389&type=3&theater" target="_blank" title="Mindy's pics"><img SRC="Mindy.jpg" width="500"></a>
 </body>
