--- a/Mindy.html
+++ b/Mindy.html
@@ -14,8 +14,33 @@
   </ol>
 <h2> Mindy </h2>
 <p>This is my fur daughter<strong> Mindy</strong></p>
+<a href="https://www.facebook.com/photo.php?fbid=1280357585331049&set=a.1280357518664389&type=3&theater" target="_blank" title="Mindy's pics"><img SRC="Mindy.jpg" width="500"></a>
 <p>
   <iframe width="1280" height="720" src="https://www.youtube.com/embed/-XbW8qco1AU" frameborder="0" allowfullscreen></iframe>
 </P>
-<a href="https://www.facebook.com/photo.php?fbid=1280357585331049&set=a.1280357518664389&type=3&theater" target="_blank" title="Mindy's pics"><img SRC="Mindy.jpg" width="500"></a>
+
+
+<p>
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://kims-family.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
+  
 </body>
